# packguard

./: .dockerignore  .gitignore  CONTEXT.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  PUBLISHING.md  README.md  cosign.pub  install.sh
.github/workflows/: ci.yml  crates-publish.yml  live-demo-snapshot.yml  release.yml
crates/packguard-actions/: Cargo.toml
crates/packguard-actions/src/: dismissals.rs  generator.rs  lib.rs  model.rs  pm_detect.rs
crates/packguard-actions/tests/: integration.rs
crates/packguard-cli/: Cargo.toml
crates/packguard-cli/src/: actions_cli.rs  cli_scope.rs  main.rs
crates/packguard-cli/tests/: actions.rs  audit.rs  cli_scope_integration.rs  graph.rs  init.rs  report.rs  scan_offline.rs  scan_recursive.rs  scans.rs
crates/packguard-core/: Cargo.toml
crates/packguard-core/src/: classify.rs  discovery.rs  ecosystem.rs  lib.rs  model.rs  npm.rs  project_root.rs  pypi.rs  registry.rs
crates/packguard-core/src/pypi/: lockfile.rs  manifest.rs
crates/packguard-core/src/registry/: npm.rs  pypi.rs
crates/packguard-intel/: Cargo.toml
crates/packguard-intel/src/: ghsa.rs  lib.rs  malware.rs  matcher.rs  normalize.rs  osv.rs  osv_api.rs  socket.rs
crates/packguard-intel/src/typosquat/: embedded.rs  mod.rs  refresh.rs
crates/packguard-intel/tests/: live_osv.rs  matcher_real_cves.rs
crates/packguard-policy/: Cargo.toml
crates/packguard-policy/src/: cascade.rs  dialect.rs  lib.rs  model.rs  parse.rs  resolve.rs
crates/packguard-policy/templates/: conservative.yml
crates/packguard-policy/tests/: cascade.rs  resolver_snapshots.rs
crates/packguard-policy/tests/fixtures/registries/: babel-core.json  django.json  jumped-major.json  jumped-minor.json  node-ipc.json  react.json  zero-only.json
crates/packguard-policy/tests/snapshots/: resolver_snapshots__babel_group_raises_offset_for_scoped_glob.snap  resolver_snapshots__babel_pin.snap  resolver_snapshots__django_min_age_days_28_pushes_recommendation_back.snap  resolver_snapshots__django_offset_minus_four_insufficient.snap  resolver_snapshots__django_pep440_offset_minus_one_lands_on_5_1_4.snap  resolver_snapshots__node_ipc_clean.snap  resolver_snapshots__node_ipc_yanked.snap  resolver_snapshots__node_ipc_yanked_passthrough.snap  resolver_snapshots__offset_all_minus_one.snap  resolver_snapshots__offset_all_zero.snap  resolver_snapshots__offset_major_minus_one.snap  resolver_snapshots__offset_minor_minus_one.snap  resolver_snapshots__offset_minor_way_too_big.snap  resolver_snapshots__offset_patch_minus_one.snap  resolver_snapshots__react_offset_minus_four.snap  resolver_snapshots__react_offset_minus_one_lands_on_18.snap  resolver_snapshots__react_offset_minus_two_lands_on_17.snap  resolver_snapshots__react_offset_zero_picks_latest_tip.snap  resolver_snapshots__react_stability.snap
crates/packguard-server/: Cargo.toml  build.rs
crates/packguard-server/bindings/: ComplianceSummary.ts  JobAccepted.ts  JobKind.ts  JobView.ts  MalwareSummary.ts  Overview.ts
crates/packguard-server/src/: app.rs  dto.rs  embed.rs  error.rs  jobs.rs  lib.rs  services.rs  state.rs
crates/packguard-server/src/services/: fs_browse.rs  graph.rs  overview.rs  packages.rs  policies.rs  scan.rs  sync_intel.rs  workspaces.rs
crates/packguard-server/tests/: api.rs  boot_wiring.rs  embed.rs  sync_writes_intel.rs  types_drift.rs
crates/packguard-store/: Cargo.toml
crates/packguard-store/migrations/: V1__initial_schema.sql  V2__vulnerability_intel.sql  V3__malware_reports.sql  V4__jobs.sql  V5__dependency_graph.sql  V6__action_dismissals.sql  V8__drop_intel_tables.sql
crates/packguard-store/migrations_intel/: V1__initial_schema.sql  V2__jobs.sql
crates/packguard-store/migrations_registry/: V1__initial_schema.sql
crates/packguard-store/src/: intel_store.rs  lib.rs  migration.rs  migration_tests.rs  project_store_cache.rs  projects_registry.rs
dashboard/: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
dashboard/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
dashboard/src/api/types/: Action.ts  ActionDeferRequest.ts  ActionDeferResponse.ts  ActionDismissRequest.ts  ActionDismissResponse.ts  ActionKind.ts  ActionSeverity.ts  ActionTarget.ts  ActionsQuery.ts  ActionsResponse.ts  AddProjectRequest.ts  (+42 more)
dashboard/src/components/: Layout.tsx
dashboard/src/lib/: api.ts  cn.ts  relativeTime.ts  useCollapsedFolders.ts  useJobStatus.ts  workspaceTree.ts
dashboard/src/pages/: Actions.tsx  Graph.tsx  Overview.tsx  PackageDetail.tsx  Packages.tsx  Policies.tsx
docs-site/: .gitignore  .packguard.yml  DEPLOY.md  README.md  next.config.mjs  package.json  pnpm-lock.yaml
docs-site/app/: globals.css  layout.tsx  page.tsx
docs-site/app/live/: page.tsx
docs-site/components/: Hero3D.tsx  Hero3DScene.tsx  SiteNav.tsx  graph-data.ts
docs-site/components/LiveDemo/: FreshnessBadge.tsx  MiniDepGraph.tsx  PolicyCard.tsx  StatsCards.tsx  TopRisks.tsx
docs-site/content/: _meta.js
docs-site/content/cli/: _meta.js  actions.mdx  audit.mdx  graph.mdx  init.mdx  report.mdx  scan.mdx  scans.mdx  sync.mdx  ui.mdx
docs-site/content/concepts/: _meta.js  offset-policy.mdx  per-project.mdx  project-store.mdx  supply-chain.mdx
docs-site/content/dashboard/: _meta.js  actions.mdx  graph.mdx  overview.mdx  package-detail.mdx  packages.mdx  policies.mdx
docs-site/content/getting-started/: _meta.js  first-scan.mdx  install.mdx
docs-site/content/integrations/: _meta.js  github-actions.mdx  gitlab-ci.mdx  pre-commit.mdx  vscode-task.mdx
docs-site/content/live/: snapshot.json
docs-site/scripts/: SNAPSHOT.md  build-snapshot.mjs  generate-llms.mjs
docs-site/types/: snapshot.ts
docs/integrations/: README.md  github-actions.md  gitlab-ci.md  pre-commit.md  vscode-task.md
fixtures/npm-basic/: package-lock.json  package.json
fixtures/pypi-pip/: requirements.txt
fixtures/pypi-poetry/: pyproject.toml
fixtures/pypi-uv/: pyproject.toml
packaging/homebrew/: packguard.rb
scripts/: bump-version.sh
(+51 files in other folders)
