[workspace]
resolver = "2"
members = [
    "crates/packguard-core",
    "crates/packguard-store",
    "crates/packguard-policy",
    "crates/packguard-intel",
    "crates/packguard-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nalo/packguard"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
semver = "1"
pep440_rs = "0.7"
globset = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
owo-colors = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.38", features = ["bundled"] }
refinery = { version = "0.9", features = ["rusqlite"] }
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
sha2 = "0.10"
zip = { version = "8", default-features = false, features = ["deflate"] }
walkdir = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
