[workspace]
resolver = "2"
members = [
    "crates/packguard-core",
    "crates/packguard-store",
    "crates/packguard-policy",
    "crates/packguard-intel",
    "crates/packguard-actions",
    "crates/packguard-server",
    "crates/packguard-cli",
]

[workspace.package]
version = "0.6.4"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tmauc/packguard"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
semver = "1"
pep440_rs = "0.7"
globset = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
owo-colors = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.38", features = ["bundled"] }
refinery = { version = "0.9", features = ["rusqlite"] }
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
sha2 = "0.10"
zip = { version = "8", default-features = false, features = ["deflate"] }
walkdir = "2"
ignore = "0.4"
glob = "0.3"
strsim = "0.11"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json", "query"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
ts-rs = { version = "11", features = ["serde-json-impl"] }
uuid = { version = "1", features = ["v4"] }
open = "5"
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
