[package]
name = "packguard-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PackGuard CLI binary."

[[bin]]
name = "packguard"
path = "src/main.rs"

[dependencies]
packguard-core = { path = "../packguard-core" }
packguard-store = { path = "../packguard-store" }
packguard-policy = { path = "../packguard-policy" }
packguard-intel = { path = "../packguard-intel" }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
owo-colors = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
