[package]
name = "packguard-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PackGuard CLI binary."

[[bin]]
name = "packguard"
path = "src/main.rs"

[features]
default = []
# Pass-through for the server's ui-embed feature so `cargo build --release -p
# packguard-cli --features ui-embed` produces a self-contained binary.
ui-embed = ["packguard-server/ui-embed"]

[dependencies]
packguard-core = { path = "../packguard-core", version = "0.0.1" }
packguard-store = { path = "../packguard-store", version = "0.0.1" }
packguard-policy = { path = "../packguard-policy", version = "0.0.1" }
packguard-intel = { path = "../packguard-intel", version = "0.0.1" }
packguard-server = { path = "../packguard-server", version = "0.0.1" }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
owo-colors = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
open = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
