[package]
# Phase 9c — crate renamed from `packguard-cli` (pre-0.2.0) to
# `packguard` so `cargo install packguard` works as expected. The
# directory stays at `crates/packguard-cli/` to keep the rename to a
# single file. See PUBLISHING.md for the one-time yank runbook on
# `packguard-cli@0.1.0`.
name = "packguard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PackGuard — local, multi-repo, multi-ecosystem package version governance with offset policy and embedded dashboard."
readme = "../../README.md"
keywords = ["dependencies", "security", "supply-chain", "npm", "pypi"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "packguard"
path = "src/main.rs"

[features]
default = []
# Pass-through for the server's ui-embed feature so `cargo build --release -p
# packguard --features ui-embed` produces a self-contained binary.
ui-embed = ["packguard-server/ui-embed"]

[dependencies]
packguard-core = { path = "../packguard-core", version = "0.6.3" }
packguard-store = { path = "../packguard-store", version = "0.6.3" }
packguard-policy = { path = "../packguard-policy", version = "0.6.3" }
packguard-intel = { path = "../packguard-intel", version = "0.6.3" }
packguard-actions = { path = "../packguard-actions", version = "0.6.3" }
packguard-server = { path = "../packguard-server", version = "0.6.3" }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
owo-colors = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
open = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
