[package]
name = "packguard-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PackGuard core library: manifest parsing, registry clients, semver classification."

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
semver = { workspace = true }
ignore = { workspace = true }
glob = { workspace = true }
globset = { workspace = true }
pep440_rs = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
