[package]
name = "packguard-intel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PackGuard vulnerability intel: OSV + GHSA fetchers, parsers, dedup."

[dependencies]
packguard-core = { path = "../packguard-core", version = "0.5.1" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
pep440_rs = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
zip = { workspace = true }
walkdir = { workspace = true }
strsim = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
