[package]
name = "packguard-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PackGuard policy engine: offset rules, pins, recommended-version computation."

[dependencies]
packguard-core = { path = "../packguard-core", version = "0.6.1" }
packguard-intel = { path = "../packguard-intel", version = "0.6.1" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
semver = { workspace = true }
pep440_rs = { workspace = true }
globset = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
serde_json = { workspace = true }
