[package]
name = "packguard-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PackGuard HTTP server: REST API + job runner backing the dashboard."

[dependencies]
packguard-core = { path = "../packguard-core" }
packguard-store = { path = "../packguard-store" }
packguard-policy = { path = "../packguard-policy" }
packguard-intel = { path = "../packguard-intel" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
ts-rs = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true }
