[package]
name = "packguard-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PackGuard SQLite store: migrations, persistence, fingerprinting."

[dependencies]
packguard-core = { path = "../packguard-core", version = "0.1.0" }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
refinery = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
